--- a/admin-war-demo/src/main/resources/templates/view/head.html
+++ b/admin-war-demo/src/main/resources/templates/view/head.html
@@ -6,39 +6,39 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 
 <!-- bootstrap & fontawesome -->
-<link rel="stylesheet" href="${path}/assets/css/bootstrap.min.css"/>
-<link rel="stylesheet" href="${path}/assets/css/font-awesome.min.css"/>
+<link rel="stylesheet" href="/assets/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="/assets/css/font-awesome.min.css"/>
 
 <!-- page specific plugin styles -->
-<link rel="stylesheet" href="${path}/assets/css/jquery-ui.min.css"/>
-<link rel="stylesheet" href="${path}/assets/css/datepicker.css"/>
-<link rel="stylesheet" href="${path}/assets/css/ui.jqgrid.css"/>
+<link rel="stylesheet" href="/assets/css/jquery-ui.min.css"/>
+<link rel="stylesheet" href="/assets/css/datepicker.css"/>
+<link rel="stylesheet" href="/assets/css/ui.jqgrid.css"/>
 
 <!-- text fonts -->
-<link rel="stylesheet" href="${path}/assets/css/ace-fonts.css"/>
-<link rel="stylesheet" href="${path}/assets/zTreeStyle/zTreeStyle.css"/>
+<link rel="stylesheet" href="/assets/css/ace-fonts.css"/>
+<link rel="stylesheet" href="/assets/zTreeStyle/zTreeStyle.css"/>
 
 <!-- ace styles -->
-<link rel="stylesheet" href="${path}/assets/css/ace.min.css"/>
+<link rel="stylesheet" href="/assets/css/ace.min.css"/>
 
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="${path}/assets/css/ace-part2.min.css"/>
+<link rel="stylesheet" href="/assets/css/ace-part2.min.css"/>
 <![endif]-->
-<link rel="stylesheet" href="${path}/assets/css/ace-skins.min.css"/>
-<link rel="stylesheet" href="${path}/assets/css/ace-rtl.min.css"/>
+<link rel="stylesheet" href="/assets/css/ace-skins.min.css"/>
+<link rel="stylesheet" href="/assets/css/ace-rtl.min.css"/>
 
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="${path}/assets/css/ace-ie.min.css"/>
+<link rel="stylesheet" href="/assets/css/ace-ie.min.css"/>
 <![endif]-->
 
 <!-- inline styles related to this page -->
 
 <!-- ace settings handler -->
-<script src="${path}/assets/js/ace-extra.min.js"></script>
+<script src="/assets/js/ace-extra.min.js"></script>
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 
 <!--[if lte IE 8]>
-<script src="${path}/assets/js/html5shiv.js"></script>
-<script src="${path}/assets/js/respond.min.js"></script>
+<script src="/assets/js/html5shiv.js"></script>
+<script src="/assets/js/respond.min.js"></script>
 <![endif]-->
